--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,14 @@
 }
 
 body{
-  color:black;
+  color:white;
     background-color: rgb(42, 87, 24);
 
 } 
+
+a{
+  text-decoration: none;
+}
 
 * {box-sizing:border-box;}   
 
@@ -138,7 +142,15 @@ padding-bottom: 5%;}
 .col31 {padding:20px;}      
 
 .card{
-  background-color: #0e1aff;
+  background-color: #287D7D;
+  padding: 10px;
+}
+
+.imagenCard{
+  width: 100%;
+  height: 325px;
+  overflow: hidden;
+  background-color: black;
 }
   
  /* Add some padding inside the card container */
@@ -148,10 +160,10 @@ padding-bottom: 5%;}
  }
 
 .card img{
-  width: 100%;
-  height: 325px;
   transition: 1s;
-  padding: 10px;
+  object-fit: cover;
+  object-position: top;
+  height: 100%;
 }
 
 .card img:hover{
@@ -316,7 +328,8 @@ padding-bottom: 7%;}
 .gridcolumna {display:grid;
   grid-template-columns: 35% 65%;}
 
-.columna {padding-top:65%;
+.columna {padding-top:35%;
+  margin-left: 10%;
 }  
 
 .container2 {
@@ -348,9 +361,22 @@ padding-bottom: 7%;}
   width: 100%;
 }
 
+iframe{
+  margin-left: 5%;
+  margin-top: 10%;
+  width: 100%;
+  height: 40%;
+}
 
+#turist{
+  padding-bottom: 2%;
+  color:black
+}
 
-
+#contacto{
+  padding-bottom: 2%;
+  color:black
+}
 
 /***************************************** FOOTER CON GRID DE 3 COLUMNAS **********************************************/
 
@@ -421,10 +447,25 @@ padding: 6%;
 /********************MEDIA QUERIES********************/
 
 
+@media only screen and (width<=1500px){
+
+    .gridturist{
+      grid-template-columns: 50% 50%;
+    }
+  }
+
 @media only screen and (width<=1000px){
 
   #wrapper { width: 100%;
              font-size:1.5rem ; }
+
+             .column{
+              margin-left: 10%;
+            }
+
+    .gridturist{
+      grid-template-columns: 50% 50%;
+    }
   }
 
 
@@ -437,11 +478,6 @@ padding: 6%;
         .c1{
           margin-right: 15%;
          }
-
-        .gridturist{
-          grid-template-columns: 50% 50%;
-        }
-
         .grid2{
           grid-template-columns: 100%;     /*el grid pasa a ser una columna en tablets*/
         }
@@ -461,6 +497,10 @@ padding: 6%;
         flex: 100%;
       }
 
+      .follow{
+        margin-left: 20%;
+      }
+      
       .gridcolumna{
         grid-template-columns: 100%;
       }
@@ -489,11 +529,20 @@ padding: 6%;
 @media only screen and (width<=800px){
   .grid31{
     grid-template-columns: 100%;
-   }
 
-   .cardA img{
-      height: 20%;
-   }
+  }
+    .imagenCard{
+      background-color: black;
+    }
+    
+    .card img{
+      object-fit:scale-down;
+      height: 150%;
+    }
+
+    
+
+
 }
 
 
@@ -539,6 +588,11 @@ padding: 6%;
         .grid4{
           grid-template-columns: 100%;
         }
+
+        .column{
+          margin-left: -7%;
+        }
+  
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -547,6 +601,7 @@ padding: 6%;
     flex: 50%;
     max-width: 50%;
   }
+
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
