arreglo de las cards

--- a/css/style.css
+++ b/css/style.css
@@ -625,3 +625,23 @@ padding: 6%;
           margin-left: -7%;
         } 
 }
+
+/*extraido de w3school*/
+
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+
+}
+
+
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+    font-size:1rem ;
+    margin-left: -27%;
+  }
+}
