--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,10 @@ a{
   text-decoration: none;
 }
 
-* {box-sizing:border-box;}   
+* {box-sizing:border-box;
+margin: 0;
+padding: 0;
+scroll-behavior: smooth;}   
 
 #wrapper{
     background-color: #82E95B;
@@ -248,6 +251,8 @@ padding-bottom: 5%;}
 
 .col23{
   padding: 25px;
+  text-align: justify;
+  padding-top: 15%;
 }
 
 .grid2{
@@ -267,11 +272,13 @@ padding-bottom: 5%;}
   }
   
   .texto1{
-  padding-top: 12%;
-  font-size: 1.2rem;
-}
-
-.texto2{
+    text-align: justify;
+    padding-top: 12%;
+    font-size: 1.2rem;
+  }
+  
+  .texto2{
+  text-align: justify;
   font-size: 1.2rem;
   padding-top: 15%;
 }
@@ -351,7 +358,7 @@ padding-bottom: 5%;}
 }
 
 iframe{
-  margin-left: 5%;
+  margin-left: 0;
   margin-top: 10%;
   width: 100%;
   height: 40%;
@@ -445,6 +452,9 @@ padding: 6%;
 
     .grid24{
       grid-template-columns: 100%;
+    }
+    .col23{
+      padding-top: 3%;
     }
   }
   
